# libx

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Overview.md  README.md
docs/: framework.md
include/bio/: FastqFile.hpp  GTFFile.hpp
include/libx/: Conv.hpp  File.hpp  GZFile.hpp  String.hpp  System.hpp  ThreadPool.hpp  Timer.h  Timer.hpp
script/: check_style.sh
tests/: CMakeLists.txt  ConvTest.cpp  FileTest.cpp  GZFileTest.cpp  StringTest.cpp  SystemTest.cpp  ThreadPoolTest.cpp  TimerTest.cpp  main.cpp
